aie/Work/logs/aie_hw.log
INFO: [v++ 60-1548] Creating build summary session with primary output /media/4T/home/xianyijiang/my_sparta/aie/Work/Work.aiecompiler_summary, at Tue Mar 10 12:13:13 2026
INFO: [v++ 82-10534] Setting option --aie.enable-partition to value 0:50
INFO: [v++ 82-31] Launching aiecompiler: aiecompiler --config /media/4T/home/xianyijiang/my_sparta/aie/Work/aie_hw.cfg
                                           AI Engine Compiler
                                     Version 2023.2 (linux64-bit)
                                     SW Build 4023990 on 2023-10-12-17:44:32
                          Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
                          Copyright 2022-2023 Advanced Micro Devices, Inc. All Rights Reserved.
INFO: [aiecompiler 77-3355] ###[Start]: Reading in platform specification from /usr/xilinx/Vitis/2023.2/base_platforms/xilinx_vck190_base_202320_1/xilinx_vck190_base_202320_1.xpfm
INFO: [aiecompiler 55-2099] Unable to extract 'pdi_files' from /usr/xilinx/Vitis/2023.2/base_platforms/xilinx_vck190_base_202320_1/hw/hw.xsa to /usr/xilinx/Vitis/2023.2/base_platforms/xilinx_vck190_base_202320_1/hw/extracted/vitis_design_wrapper_0. XSA may not contain 'pdi_files' or the destination directory is read-only
INFO: [aiecompiler 55-2053] elapsed time for repository (/usr/xilinx/Vivado/2023.2/data/embeddedsw) loading 1 seconds
INFO: [aiecompiler 77-3354] ###[Finish]:  Reading in platform specification from /usr/xilinx/Vitis/2023.2/base_platforms/xilinx_vck190_base_202320_1/xilinx_vck190_base_202320_1.xpfm
INFO: [aiecompiler 21-403] Loading part xcvc1902-vsva2197-2MP-e-S
INFO: [aiecompiler 77-3379] Extracted physical device part from platform is : xcvc1902-vsva2197-2MP-e-S 
INFO: [aiecompiler 77-297] Cmd Line : /usr/xilinx/Vitis/2023.2/aietools/bin/unwrapped/lnx64.o/aiecompiler --config /media/4T/home/xianyijiang/my_sparta/aie/Work/aie_hw.cfg 
INFO: [aiecompiler 77-404] Executing Cmd: ${XILINX_VITIS_AIETOOLS}/tps/lnx64/gcc/bin/g++ -E -std=c++17 -D__ADF_FRONTEND__ -D__AIE_ARCH__=10 -I/usr/xilinx/Vitis/2023.2/aietools/include  -I .  -I /usr/xilinx/Vitis/2023.2/aietools/include -I /media/4T/home/xianyijiang/my_sparta/aie/./aie -I /media/4T/home/xianyijiang/my_sparta/aie/./ /media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.cpp > /media/4T/home/xianyijiang/my_sparta/aie/./Work/temp/TopGraph.ii
INFO: [aiecompiler 77-404] Executing Cmd: graph_preprocessor /media/4T/home/xianyijiang/my_sparta/aie/./Work/temp/TopGraph.ii -o /media/4T/home/xianyijiang/my_sparta/aie/./Work/temp/TopGraph.processed.ii -report-core-dump  -- -std=c++17  -ftemplate-depth=2048  -Wno-return-stack-address  -Wno-missing-declarations  -Wno-parentheses-equality  -Wno-shift-negative-value  
In file included from /media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.cpp:1:
In file included from /media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:4:
/media/4T/home/xianyijiang/my_sparta/aie/./ProcessGraph/StencilCoreGraph.h:27:23: error: use of undeclared identifier 'N'
        static_assert(N == 1, "tri-hdiff lane has one final output row");
                      ^
/media/4T/home/xianyijiang/my_sparta/aie/./ProcessGraph/StencilCoreGraph.h:29:32: error: use of undeclared identifier 'hdiff_lap'
        k_lap = kernel::create(hdiff_lap);
                               ^
/media/4T/home/xianyijiang/my_sparta/aie/./ProcessGraph/StencilCoreGraph.h:30:34: error: use of undeclared identifier 'hdiff_flux1'
        k_flux1 = kernel::create(hdiff_flux1);
                                 ^
/media/4T/home/xianyijiang/my_sparta/aie/./ProcessGraph/StencilCoreGraph.h:31:34: error: use of undeclared identifier 'hdiff_flux2'
        k_flux2 = kernel::create(hdiff_flux2);
                                 ^
/media/4T/home/xianyijiang/my_sparta/aie/./ProcessGraph/StencilCoreGraph.h:76:36: error: type 'port<adf::output>' (aka 'port<adf::direction::out>') does not provide a subscript operator
        connect(k_flux2.out[0], out[0]);
                                ~~~^~
In file included from /media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.cpp:1:
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:32:41: error: no member named 'row0_lap' in 'StencilCoreGraph'
        connect(in_plio[0].out[0], core.row0_lap);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:33:41: error: no member named 'row1_lap' in 'StencilCoreGraph'
        connect(in_plio[1].out[0], core.row1_lap);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:34:41: error: no member named 'row2_lap' in 'StencilCoreGraph'
        connect(in_plio[2].out[0], core.row2_lap);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:35:41: error: no member named 'row3_lap' in 'StencilCoreGraph'
        connect(in_plio[3].out[0], core.row3_lap);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:36:41: error: no member named 'row4_lap' in 'StencilCoreGraph'
        connect(in_plio[4].out[0], core.row4_lap);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:38:41: error: no member named 'row1_flux' in 'StencilCoreGraph'
        connect(in_plio[5].out[0], core.row1_flux);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:39:41: error: no member named 'row2_flux' in 'StencilCoreGraph'
        connect(in_plio[6].out[0], core.row2_flux);
                                   ~~~~ ^
/media/4T/home/xianyijiang/my_sparta/aie/./TopGraph.h:40:41: error: no member named 'row3_flux' in 'StencilCoreGraph'
        connect(in_plio[7].out[0], core.row3_flux);
                                   ~~~~ ^
13 errors generated.
Error while processing /media/4T/home/xianyijiang/my_sparta/aie/./Work/temp/TopGraph.ii.
ERROR: [aiecompiler 77-753] This application has discovered an exceptional condition from which it cannot recover while executing the following command
  >> graph_preprocessor /media/4T/home/xianyijiang/my_sparta/aie/./Work/temp/TopGraph.ii -o /media/4T/home/xianyijiang/my_sparta/aie/./Work/temp/TopGraph.processed.ii -report-core-dump  -- -std=c++17  -ftemplate-depth=2048  -Wno-return-stack-address  -Wno-missing-declarations  -Wno-parentheses-equality  -Wno-shift-negative-value  .
Please check the output log for errors and fix those before you run the application.

Compilation Failed
(WARNING:0, CRITICAL-WARNING:0, ERROR:1)
